--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         dataLayer.push(arguments);
       }
     </script>
-    <title>Business Name</title>
+    <title>Easy Plug MarketPlace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
